--- a/index.html
+++ b/index.html
@@ -57,18 +57,13 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">你好  我是張景雲!</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            <h3>我是景雲，我是一個 <span>成大資訊工程學系</span>的學生，我喜歡的領域是 <span>Machine Learning(Deep Learning)</span> and <span>Web Programing</span>很高興認識你。
+             <!-- <a class="smoothscroll" href="#about">start scrolling</a> --!>
+            <br><a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://www.facebook.com/jamesZhanghelpQQ"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/jameshelpQQ"><i class="fa fa-linkedin"></i></a></li>
             </ul>
          </div>
       </div>
