--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-            <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -83,7 +81,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="https://i.imgur.com/U2MomvV.jpg" alt="" />
 
          </div>
 
@@ -91,12 +89,11 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+
+           <p>我是成大資訊系的學生，目前在學生會做資訊部部長，我是一個喜歡自己上網學東西的人，平常喜歡到處看machine learning的線
+　　　　　　　上課程，然後使用tensorflow and keras實作一些自學的演算法，寫一些自學的上課筆記等。平常喜歡沒事寫寫leetcode增加實力，或是用網頁技術做
+　　　　　　　一些可以幫助同學們的小程式。有時候放假會去衝浪，或是練練身體。
+
             </p>
 
             <div class="row">
@@ -105,21 +102,12 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>張景雲</span><br>
+						   <span>z5254215560@gmail.com</span><br>
 					   </p>
 
                </div>
 
-               <div class="columns download">
-                  <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
-                  </p>
-               </div>
 
             </div> <!-- end row -->
 
@@ -135,7 +123,7 @@
    <section id="resume">
 
       <!-- Education
-      ----------------------------------------------- -->
+      --------------------------------------------- -->
       <div class="row education">
 
          <div class="three columns header-col">
@@ -149,13 +137,13 @@
                <div class="twelve columns">
 
                   <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <p class="info">Master in Conputer Science <span>&bull;</span> <em class="date">在學中</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  我的大學生活不像一般人幸運，我花了很多時間找尋自己要什麼，我大一就讀資源工程學系，我是指考生，從上面填下來就是這個系了，因此我大一就下定決心要轉去一個我喜歡的系，材料系，
+　　　　　　　　　那時候我只覺得我高中化學考得不錯，所以想轉到這個系所念書，我十分認真地的考試唸書，上下學期都拿了全班第一的書卷獎，但是轉到材料系之後發現這不是我想要的生活，我的成績一落千丈，
+　　　　　　　　　於是我在二下的時候，去電機系找到一位教授帶著我寫程式，那時候我幾乎對於程式沒有任何概念，但是我卻在實驗室當一個小小見習生的過程中找到自己真正喜歡的領域，於是我大三的時候決定，
+　　　　　　　　　降轉去大二的資訊系，雖然成績沒有很好看，但是我很確定這是我未來想要的日子與方向。
                   </p>
 
                </div>
@@ -166,16 +154,44 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>Online Course</h3>
+                  <p class="info">Coursera <span>&bull;</span> <em class="date">2017</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  <a href="https://www.coursera.org/account/accomplishments/records/5E7ARGESWR2B">
+                  Neural Networks and Deep Learning<br>
+                  </a>
+                  <a href="https://www.coursera.org/account/accomplishments/records/54WTB94ZMWJB">
+                  Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization<br>
+                  </a>
+                  <a href="https://www.coursera.org/account/accomplishments/records/Y2UJT79363EL">
+                  Structuring Machine Learning Projects<br>
+                  </a>
+                  <a href="https://www.coursera.org/account/accomplishments/records/JBMABEJHSACB">
+                  Convolutional Neural Networks<br>
+                  </a>
                   </p>
 
+                  <p class="info">Udacity <span>&bull;</span> <em class="date">2017</em></p>
+
+                  <p>
+                  Google Deep Learning
+                  </p>
+
+                  <p class="info">Youtube<span>&bull;</span> <em class="date">2018</em></p>
+
+                  <p>
+                  機器學習　　林軒田老師<br>
+　　　　　　　　　機器學習　　李弘毅老師<br>
+                  </p>
+
+                  <p class="info">實體課程 <span>&bull;</span> <em class="date">2017</em></p>
+
+                  <p>
+                  手把手深度學習<br>
+                  python機器學習初探<br>
+                  統計學家教你穩紮穩打 R 語言資料分析<br>
+                  </p>
                </div>
 
             </div> <!-- item end -->
@@ -186,7 +202,7 @@
 
 
       <!-- Work
-      ----------------------------------------------- -->
+      --------------------------------------------- -->
       <div class="row work">
 
          <div class="three columns header-col">
@@ -237,7 +253,7 @@
 
 
       <!-- Skills
-      ----------------------------------------------- -->
+      --------------------------------------------- -->
       <div class="row skill">
 
          <div class="three columns header-col">
@@ -427,7 +443,7 @@
 
 
          <!-- Modal Popup
-	      --------------------------------------------------------------- -->
+	      ------------------------------------------------------------- -->
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
