eat dinner break

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
 
            <p>我是成大資訊系的學生，目前在學生會做資訊部部長，我是一個喜歡自己上網學東西的人，平常喜歡到處看machine learning的線
-　　　　　　　上課程，然後使用tensorflow and keras實作一些自學的演算法，寫一些自學的上課筆記等。平常喜歡沒事寫寫leetcode增加實力，或是用網頁技術做
-　　　　　　　一些可以幫助同學們的小程式。有時候放假會去衝浪，或是練練身體。
+上課程，然後使用tensorflow and keras實作一些自學的演算法，寫一些自學的上課筆記等。平常喜歡沒事寫寫leetcode增加實力，或是用網頁技術做
+一些可以幫助同學們的小程式。有時候放假會去衝浪，或是練練身體。
 
             </p>
 
@@ -140,9 +140,9 @@
 
                   <p>
                   我的大學生活不像一般人幸運，我花了很多時間找尋自己要什麼，我大一就讀資源工程學系，我是指考生，從上面填下來就是這個系了，因此我大一就下定決心要轉去一個我喜歡的系，材料系，
-　　　　　　　　　那時候我只覺得我高中化學考得不錯，所以想轉到這個系所念書，我十分認真地的考試唸書，上下學期都拿了全班第一的書卷獎，但是轉到材料系之後發現這不是我想要的生活，我的成績一落千丈，
-　　　　　　　　　於是我在二下的時候，去電機系找到一位教授帶著我寫程式，那時候我幾乎對於程式沒有任何概念，但是我卻在實驗室當一個小小見習生的過程中找到自己真正喜歡的領域，於是我大三的時候決定，
-　　　　　　　　　降轉去大二的資訊系，雖然成績沒有很好看，但是我很確定這是我未來想要的日子與方向。
+那時候我只覺得我高中化學考得不錯，所以想轉到這個系所念書，我十分認真地的考試唸書，上下學期都拿了全班第一的書卷獎，但是轉到材料系之後發現這不是我想要的生活，我的成績一落千丈，
+於是我在二下的時候，去電機系找到一位教授帶著我寫程式，那時候我幾乎對於程式沒有任何概念，但是我卻在實驗室當一個小小見習生的過程中找到自己真正喜歡的領域，於是我大三的時候決定，
+降轉去大二的資訊系，雖然成績沒有很好看，但是我很確定這是我未來想要的日子與方向。
                   </p>
 
                </div>
@@ -180,17 +180,38 @@
                   <p class="info">Youtube<span>&bull;</span> <em class="date">2018</em></p>
 
                   <p>
-                  機器學習　　林軒田老師<br>
-　　　　　　　　　機器學習　　李弘毅老師<br>
+機器學習　　林軒田老師<br>
+機器學習　　李弘毅老師<br>
                   </p>
 
                   <p class="info">實體課程 <span>&bull;</span> <em class="date">2017</em></p>
 
                   <p>
-                  手把手深度學習<br>
-                  python機器學習初探<br>
-                  統計學家教你穩紮穩打 R 語言資料分析<br>
+                  手把手深度學習  --台灣資料科學年會 <br>
+                  python機器學習初探  --台灣資料科學年會<br>
+                  統計學家教你穩紮穩打 R 語言資料分析  --台灣資料科學年會<br>
                   </p>
+               </div>
+
+            </div> <!-- item end -->
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>some of programing practice</h3>
+
+                  <p> 
+                  <a href="https://hackmd.io/s/By_cfBYzz">
+                  PLA(perceptron learning)<br>
+                  </a>
+
+                  <a href="https://github.com/z5254215560/style-transfer">
+                  style-transfer<br>
+                  </a>
+                  <br>
+其他的程式四散在各種地方，有機會在整理上來哈哈
+                  </p>
+                  
                </div>
 
             </div> <!-- item end -->
@@ -214,14 +235,11 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>成大剩食通知</h3>
+                  <p class="info">Leader and Developer<span>&bull;</span> <em class="date"> 2017 - Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+校園內常常會有因為辦活動剩下的食物，為了解決這個問題，我開發了一個聊天機器人解決這個問題，大家可以先透過機器人訂閱訊息，然後如果有人有多的食物，那他就可以透過這個聊天機器人把有食物的訊息傳給其他有訂閱的人，後來漸漸地目前訂閱人數已經超過1000人，也號召了一些志同道合的朋友一起維護他
                   </p>
 
                </div>
@@ -232,14 +250,14 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>Microsoft Taiwan and 資訊工業策進會</h3>
+                  <p class="info">intern <span>&bull;</span> <em class="date">2017 - 2018</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+我參與一個叫digi+數位人才加速計畫的時候實習的兩家因計畫合作的企業，在實習過程中我所做的專題是利用deep learning自動將不良內容（以香菸為例）打上馬賽克，我認為打馬這種工作要請一堆工讀生來做實在太辛苦了，所以我想自動化這個工作。我的作法是先用疊一個yolo的模型，先抓出我想要的東西的位子，再根據這位子用open-cv做馬賽克處理<br>
+                  <a href="https://www.youtube.com/watch?v=Rj2VV63TIFo&t=14s">
+                  結果demo<br>
+                  </a>
                   </p>
 
                </div>
