--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
                <div class="twelve columns">
 
-                  <h3>成大剩食通知</h3>
+                  <h3 style="font-weight:bold;">成大剩食通知</h3>
                   <p class="info">Leader and Developer<span>&bull;</span> <em class="date"> 2017 - Present</em></p>
 
                   <p>
@@ -250,7 +250,7 @@
 
                <div class="twelve columns">
 
-                  <h3>Microsoft Taiwan and 資訊工業策進會</h3>
+                  <h3 style="font-weight:bold;">Microsoft Taiwan and 資訊工業策進會</h3>
                   <p class="info">intern <span>&bull;</span> <em class="date">2017 - 2018</em></p>
 
                   <p>
