--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
+	    <li><a class="smoothscroll" href="#resume">Resume</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -301,11 +300,11 @@
 	    <div class="bars">
 		<ul class="skills">
 	            <li><span class="bar-expand photoshop"></span><em>Python</em></li>
-                    <p>機器學習上比較熟悉tensorflow，其他框架都不太熟悉頂多keras偶而會用到，實做過的模型多數跟CNN有關，ex Vgg16 19,Alex net,google net,yolo,style transfer,auto encoder　RNN LSTM GAN reinforce learning是最近正在學的東西</p>
+                    <p>機器學習上比較熟悉tensorflow，其他框架都不太熟悉頂多keras偶而會用到，實做過的模型多數跟CNN有關，ex Vgg,Alex net,google net,yolo,style transfer,auto encoder<br>最近也在研究RNN LSTM GAN reinforce learning</p><br>
                     <li><span class="bar-expand illustrator"></span><em>Javascript</em></li>
-                    <p>前端懂一點jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs express</p>
+                    <p>前端懂一點html5,css3,jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs express</p><br>
 		    <li><span class="bar-expand wordpress"></span><em>C</em></li>
-                    <p>只能說我懂語法，基本上對我來說就是拿來實作資料結構作業的語言 tree graph link list，老鼠走迷宮\-3-/之類的。
+                    <p>只能說我懂語法，基本上對我來說就是拿來實作資料結構作業的語言 tree graph link list，老鼠走迷宮之類的。
 		</ul>
 
 	   </div><!-- end skill-bars -->
