final final fuck fuck

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                <div class="twelve columns">
 
                   <h3>University of Life</h3>
-                  <p class="info">Master in Conputer Science <span>&bull;</span> <em class="date">在學中</em></p>
+                  <p class="info">Master in Computer Science <span>&bull;</span> <em class="date">在學中</em></p>
 
                   <p>
                   我的大學生活不像一般人幸運，我花了很多時間找尋自己要什麼，我大一就讀資源工程學系，我是指考生，從上面填下來就是這個系了，因此我大一就下定決心要轉去一個我喜歡的系，材料系，
