--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                <div class="twelve columns">
 
-                  <h3>some of programing practice</h3>
+                  <h3>Programing Practice or Note</h3>
 
                   <p> 
                   <a href="https://hackmd.io/s/By_cfBYzz">
@@ -206,6 +206,15 @@
 
                   <a href="https://github.com/z5254215560/style-transfer">
                   style-transfer<br>
+                  </a>
+                  <a href="https://hackmd.io/AwZgbAHAZgpgxgRgLQE5hxkgLArBWVLAQ2RRhjzgCMo8woSg">
+                  convolution neural network --1<br>
+                  </a>
+                  <a href="https://hackmd.io/AwUwJiDMCcDGBGBaAjAQwOzUQFgGzqWmwDNdFhZIBWADirCvl0lyA===">
+                  convolution neural network --2<br>
+                  </a>
+                  <a href="https://hackmd.io/MYMwLAHBIIYJwFpjAMwAYFngUwTFKYCAjGMgExgAmKVwMAbEA===">
+                  convolution neural network --3<br>
                   </a>
                   <br>
 其他的程式四散在各種地方，有機會在整理上來哈哈
