--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ CS231n 　　 李飛飛教授<br>
                   <p class="info">intern <span>&bull;</span> <em class="date">2017 - 2018</em></p>
 
                   <p>
-我參與一個叫digi+數位人才加速計畫的時候實習的兩家因計畫合作的企業，在實習過程中我所做的專題是利用deep learning自動將不良內容（以香菸為例）打上馬賽克，我認為打馬這種工作要請一堆工讀生來做實在太辛苦了，所以我想自動化這個工作。我的作法是先用疊一個yolo的模型，先抓出我想要的東西的位子，再根據這位子用open-cv做馬賽克處理<br>
+我參與一個叫digi+數位人才加速計畫的時候實習的兩家因計畫合作的企業，在實習過程中我所做的專題是利用deep learning自動將不良內容（以香菸為例）打上馬賽克，我認為打馬這種工作要請一堆工讀生來做實在太辛苦了，所以我想自動化這個工作。我的作法是先用疊一個yolo的模型，先抓出我想要的東西的位子，再根據這位子用open-cv做馬賽克處理(基於保密合約，抱歉不能提供程式碼，雖然他們應該也不在乎這種小小專案0.0)<br>
                   <a href="https://www.youtube.com/watch?v=Rj2VV63TIFo&t=14s">
                   結果demo<br>
                   </a>
