--- a/index.html
+++ b/index.html
@@ -311,11 +311,11 @@ CS231n 　　 李飛飛教授<br>
 	    <div class="bars">
 		<ul class="skills">
 	            <li><span class="bar-expand photoshop"></span><em>Python</em></li>
-                    <p>機器學習上比較熟悉tensorflow，其他框架都不太熟悉頂多keras偶而會用到，實做過的模型多數跟CNN有關，ex Vgg,Alex net,google net,yolo,style transfer,auto encoder<br>最近也在研究RNN LSTM GAN reinforce learning</p><br>
+                    <p>機器學習上比較熟悉tensorflow,keras,sklearn,pandas，實做過的模型多數跟NN,random forest有關<br>最近也在研究 GAN reinforce learning</p><br>
                     <li><span class="bar-expand illustrator"></span><em>Javascript</em></li>
                     <p>前端懂一點html5,css3,jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs express</p><br>
 		    <li><span class="bar-expand wordpress"></span><em>C</em></li>
-                    <p>只能說我懂語法，基本上對我來說就是拿來實作資料結構作業的語言 tree graph link list，老鼠走迷宮之類的。
+                    <p>我拿來實作資料結構,演算法的語言 tree,graph,link-list,system cache。
 		</ul>
 
 	   </div><!-- end skill-bars -->
