add new content

--- a/index.html
+++ b/index.html
@@ -88,10 +88,7 @@
             <h2>About Me</h2>
 
 
-           <p>我是成大資訊系的學生，目前在學生會做資訊部部長，我是一個喜歡自己上網學東西的人，平常喜歡到處看machine learning的線
-上課程，然後使用tensorflow and keras實作一些自學的演算法，寫一些自學的上課筆記等。偶爾寫寫leetcode增加實力，或是用網頁技術做
-一些可以幫助同學們的小程式。有時候放假會去衝浪，或是練練身體。
-
+           <p>我是成大資訊系的學生，專業是machine learning, web delelop, linux。
             </p>
 
             <div class="row">
@@ -199,29 +196,59 @@ CS231n 　　 李飛飛教授<br>
 
                <div class="twelve columns">
 
-                  <h3>Programing Practice or Note</h3>
+                  <h3>Machine Learning Note</h3>
 
                   <p> 
                   <a href="https://hackmd.io/s/By_cfBYzz">
                   PLA(perceptron learning)<br>
                   </a>
-
-                  <a href="https://github.com/z5254215560/style-transfer">
-                  style-transfer<br>
-                  </a>
-                  <a href="https://hackmd.io/AwZgbAHAZgpgxgRgLQE5hxkgLArBWVLAQ2RRhjzgCMo8woSg">
-                  convolution neural network --1<br>
-                  </a>
-                  <a href="https://hackmd.io/AwUwJiDMCcDGBGBaAjAQwOzUQFgGzqWmwDNdFhZIBWADirCvl0lyA===">
-                  convolution neural network --2<br>
-                  </a>
-                  <a href="https://hackmd.io/MYMwLAHBIIYJwFpjAMwAYFngUwTFKYCAjGMgExgAmKVwMAbEA===">
-                  convolution neural network --3<br>
+                  <a href="https://hackmd.io/s/SkcLtmcOm">
+                  Machine Health Monitoring Using Local Feature-Based Gated Recurrent Unit Networks<br>
                   </a>
                   <br>
-其他的程式四散在各種地方，有機會在整理上來哈哈
                   </p>
-                  
+                  <h3>Machine Learning Practice(by tensorflow)</h3>
+
+                  <p> 
+                  <a href="https://github.com/z5254215560/google_net">
+                    Google Net<br>
+                  </a>
+                  <a href="https://github.com/z5254215560/eazyGAN">
+                    GAN<br>
+                  </a>
+                  <a href="https://github.com/z5254215560/crnn">
+                    CRNN<br>
+                  </a>
+                  <a href="https://github.com/z5254215560/bidirectionRNN">
+                    bidirectionRNN<br>
+                  </a>
+                  <a href="https://github.com/z5254215560/seqToSeq">
+                    Seq2seq<br>
+                  </a>
+                  <a href="https://github.com/z5254215560/seqToSeq">
+                    Seq2seq<br>
+                  </a>
+                  <a href="https://github.com/z5254215560/DeepAutoIncoder">
+                    DeepAutoIncoder<br>
+                  </a>
+                  <br>
+                  </p>
+                  <h3>Machine Learning Race</h3>
+
+                  <p> 
+                  <a href="https://github.com/z5254215560/kdd-2018">
+                     KDD CUP 2018<br>
+                  </a>
+                  <br>
+                  </p>
+                  <h3>Linux Practice</h3>
+
+                  <p> 
+                  <a href="https://github.com/z5254215560/linux_practice">
+                     Linux Practice<br>
+                  </a>
+                  <br>
+                  </p>
                </div>
 
             </div> <!-- item end -->
@@ -276,7 +303,7 @@ CS231n 　　 李飛飛教授<br>
                </div>
 
             </div> <!-- item end -->
-
+            <!--
             <div class="row item">
 
                <div class="twelve columns">
@@ -292,7 +319,7 @@ CS231n 　　 李飛飛教授<br>
                   </p>
 
                </div>
-
+               -->
             </div> <!-- item end -->
          </div> <!-- main-col end -->
 
@@ -311,11 +338,11 @@ CS231n 　　 李飛飛教授<br>
 	    <div class="bars">
 		<ul class="skills">
 	            <li><span class="bar-expand photoshop"></span><em>Python</em></li>
-                    <p>機器學習上比較熟悉tensorflow,keras,sklearn,pandas，實做過的模型多數跟NN,random forest有關<br>最近也在研究 GAN reinforce learning</p><br>
+                    <p>tensorflow,keras,sklearn,pandas\</p><br>
                     <li><span class="bar-expand illustrator"></span><em>Javascript</em></li>
-                    <p>前端懂一點html5,css3,jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs express</p><br>
+                    <p>html5,css3,jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs express</p><br>
 		    <li><span class="bar-expand wordpress"></span><em>C</em></li>
-                    <p>我拿來實作資料結構,演算法的語言 tree,graph,link-list,system cache。
+                    <p>tree,graph,link-list,system cache(LRU),OS,linux。
 		</ul>
 
 	   </div><!-- end skill-bars -->
