add new content

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2>About Me</h2>
 
 
-           <p>我是成大資訊系的學生，專業是machine learning, web delelop, linux。
+           <p>我是成大資訊系的大三學生，專業是machine learning, web delelop, linux。
             </p>
 
             <div class="row">
@@ -338,10 +338,10 @@ CS231n 　　 李飛飛教授<br>
 	    <div class="bars">
 		<ul class="skills">
 	            <li><span class="bar-expand photoshop"></span><em>Python</em></li>
-                    <p>tensorflow,keras,sklearn,pandas\</p><br>
+                    <p>tensorflow,keras,sklearn,pandas...</p><br>
                     <li><span class="bar-expand illustrator"></span><em>Javascript</em></li>
                     <p>html5,css3,jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs express</p><br>
-		    <li><span class="bar-expand wordpress"></span><em>C</em></li>
+		    <li><span class="bar-expand wordpress"></span><em>C/C++</em></li>
                     <p>tree,graph,link-list,system cache(LRU),OS,linux。
 		</ul>
 
