add some project

--- a/index.html
+++ b/index.html
@@ -225,9 +225,6 @@ CS231n 　　 李飛飛教授<br>
                   <a href="https://github.com/z5254215560/seqToSeq">
                     Seq2seq<br>
                   </a>
-                  <a href="https://github.com/z5254215560/seqToSeq">
-                    Seq2seq<br>
-                  </a>
                   <a href="https://github.com/z5254215560/DeepAutoIncoder">
                     DeepAutoIncoder<br>
                   </a>
@@ -246,6 +243,14 @@ CS231n 　　 李飛飛教授<br>
                   <p> 
                   <a href="https://github.com/z5254215560/linux_practice">
                      Linux Practice<br>
+                  </a>
+                  <br>
+                  </p>
+                  <h3>Other</h3>
+
+                  <p> 
+                  <a href="https://github.com/z5254215560/tabu_search">
+                     Tabu search<br>
                   </a>
                   <br>
                   </p>
@@ -285,7 +290,23 @@ CS231n 　　 李飛飛教授<br>
                </div>
 
             </div> <!-- item end -->
+           <div class="row item">
 
+               <div class="twelve columns">
+
+                  <h3 style="font-weight:bold;">Terra官方網站</h3>
+                  <p class="info">Developer<span>&bull;</span> <em class="date"> 2017 - Present</em></p>
+
+                  <p>
+                  協助得來空間設計製作官方網站<br>
+                  <a href="http://172.104.163.221/">
+                  官方網站連結<br>
+                  </a>
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
             <div class="row item">
 
                <div class="twelve columns">
