--- a/index.html
+++ b/index.html
@@ -135,10 +135,9 @@
                   <p class="info">Master in Computer Science <span>&bull;</span> <em class="date">在學中</em></p>
 
                   <p>
-                  我的大學生活不像一般人幸運，我花了很多時間找尋自己要什麼，我大一就讀資源工程學系，我是指考生，從上面填下來就是這個系了，因此我大一就下定決心要轉去一個我喜歡的系，材料系，
-那時候我只覺得我高中化學考得不錯，所以想轉到這個系所念書，我十分認真地的考試唸書，上下學期都拿了全班第一的書卷獎，但是轉到材料系之後發現這不是我想要的生活，我的成績一落千丈，
-於是我在二下的時候，去電機系找到一位教授帶著我寫程式，那時候我幾乎對於程式沒有任何概念，但是我卻在實驗室當一個小小見習生的過程中找到自己真正喜歡的領域，於是我大三的時候決定，
-降轉去大二的資訊系，雖然成績沒有很好看，但是我很確定這是我未來想要的日子與方向。
+                    我是一個喜歡技術並且喜歡與人分享，很喜歡把自己腦中的 idea 實作出來的感覺，也喜歡與朋友一起完成一些作品，例如與電機系同學合作，在台大黑客松上做一個 會自己跟著你跑的行李箱的 prototype。<br>
+                    我是一個喜歡與開源社群互動的人，最近有機會可以跟MOPCON後端組一起開發 2019 活動網頁後端。雖然是一個技術人，但我喜歡與人交流，喜歡與人互動，發覺生活上的需求，像是我跟同學聊天發現他有在接逐字稿，便幫他接了自然語言辨識的API幫助他更輕鬆的完成工作。
+                    
                   </p>
 
                </div>
@@ -210,27 +209,12 @@ CS231n 　　 李飛飛教授<br>
                   <h3>Machine Learning Practice(by tensorflow)</h3>
 
                   <p> 
-                  <a href="https://github.com/z5254215560/google_net">
-                    Google Net<br>
-                  </a>
-                  <a href="https://github.com/z5254215560/eazyGAN">
-                    GAN<br>
-                  </a>
-                  <a href="https://github.com/z5254215560/crnn">
-                    CRNN<br>
-                  </a>
-                  <a href="https://github.com/z5254215560/bidirectionRNN">
-                    bidirectionRNN<br>
-                  </a>
-                  <a href="https://github.com/z5254215560/seqToSeq">
-                    Seq2seq<br>
-                  </a>
-                  <a href="https://github.com/z5254215560/DeepAutoIncoder">
-                    DeepAutoIncoder<br>
+                  <a href="https://github.com/Zames-Chang/machine-learning-paper-review">
+                    Machine Learning Paper Review<br>
                   </a>
                   <br>
                   </p>
-                  <h3>Machine Learning Race</h3>
+                  <h3>Machine Learning Competition</h3>
 
                   <p> 
                   <a href="https://github.com/z5254215560/kdd-2018">
@@ -254,6 +238,34 @@ CS231n 　　 李飛飛教授<br>
                   </a>
                   <br>
                   </p>
+                  <h3>Machine Learning Competition</h3>
+
+                  <p> 
+                  <a href="https://github.com/z5254215560/kdd-2018">
+                     KDD CUP 2018<br>
+                  </a>
+                  <br>
+                  </p>
+                  <h3>Teah Notes</h3>
+                    <p> 
+                      <a href="https://hackmd.io/s/BkhHi4Zv4">
+                        Kubernetes 1001<br>
+                                    </a>
+                                    <br>
+                      <a href="https://hackmd.io/s/S2ce7HZhT7O3M7wltUvsIA">
+                                      Linux Link List<br>
+                                                  </a>
+                                                  <a href="https://hackmd.io/qVXOqAavTLiGBvZbMaU9Hw">
+                                                    Linux Link List1<br>
+                                                                </a>
+                                                  <a href="https://hackmd.io/s/S2ce7HZhT7O3M7wltUvsIA">
+                                                    Linux Link List2<br>
+                                                                </a>
+                                                                <a href="https://hackmd.io/s/J0VudaHPS_2VcBXzDXOsfQ">
+                                                                  費式數列的加速<br>
+                                                                              </a>
+                                                                
+                                    </p>
                </div>
 
             </div> <!-- item end -->
@@ -299,7 +311,7 @@ CS231n 　　 李飛飛教授<br>
 
                   <p>
                   協助得來空間設計製作官方網站<br>
-                  <a href="http://172.104.163.221/">
+                  <a href="http://www.terra.com.tw/">
                   官方網站連結<br>
                   </a>
                   </p>
@@ -315,32 +327,12 @@ CS231n 　　 李飛飛教授<br>
                   <p class="info">intern <span>&bull;</span> <em class="date">2017 - 2018</em></p>
 
                   <p>
-我參與一個叫digi+數位人才加速計畫的時候實習的兩家因計畫合作的企業，在實習過程中我所做的專題是利用deep learning自動將不良內容（以香菸為例）打上馬賽克，我認為打馬這種工作要請一堆工讀生來做實在太辛苦了，所以我想自動化這個工作。我的作法是先用疊一個yolo的模型，先抓出我想要的東西的位子，再根據這位子用open-cv做馬賽克處理(基於保密合約，抱歉不能提供程式碼，雖然他們應該也不在乎這種小小專案0.0)<br>
-                  <a href="https://www.youtube.com/watch?v=Rj2VV63TIFo&t=14s">
-                  結果demo<br>
-                  </a>
+實習過程中我所做的專題是利用deep learning自動將不良內容（以香菸為例）打上馬賽克<br>
                   </p>
 
                </div>
 
             </div> <!-- item end -->
-            <!--
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3 style="font-weight:bold;">成大排課輔助課表</h3>
-                  <p class="info">Developer <span>&bull;</span> <em class="date">2017 - 2018</em></p>
-
-                  <p>
-因為想要練習vue.js，所以順便幫大家寫一個可以排課表的網頁<br>
-                  <a href="https://merry.ee.ncku.edu.tw/~e44041034/">
-                  課表輔助系統<br>
-                  </a>
-                  </p>
-
-               </div>
-               -->
             </div> <!-- item end -->
          </div> <!-- main-col end -->
 
@@ -361,7 +353,7 @@ CS231n 　　 李飛飛教授<br>
 	            <li><span class="bar-expand photoshop"></span><em>Python</em></li>
                     <p>tensorflow,keras,sklearn,pandas...</p><br>
                     <li><span class="bar-expand illustrator"></span><em>Javascript</em></li>
-                    <p>html5,css3,jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs express</p><br>
+                    <p>html5,css3,jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs, php, Django</p><br>
 		    <li><span class="bar-expand wordpress"></span><em>C/C++</em></li>
                     <p>tree,graph,link-list,system cache(LRU),OS,linux。
 		</ul>
