--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ CS231n 　　 李飛飛教授<br>
                   </a>
                   <br>
                   </p>
-                  <h3>Teah Notes</h3>
+                  <h3>Tech Notes</h3>
                     <p> 
                       <a href="https://hackmd.io/s/BkhHi4Zv4">
                         Kubernetes 1001<br>
@@ -264,6 +264,9 @@ CS231n 　　 李飛飛教授<br>
                                                                 <a href="https://hackmd.io/s/J0VudaHPS_2VcBXzDXOsfQ">
                                                                   費式數列的加速<br>
                                                                               </a>
+                                                                              <a href="https://hackmd.io/s/Y5M8UZN9SJunBCTmbm_JmA?both">
+                                                                                Stanford 計算機網路<br>
+                                                                                            </a>
                                                                 
                                     </p>
                </div>
