--- a/index.html
+++ b/index.html
@@ -252,9 +252,6 @@ CS231n 　　 李飛飛教授<br>
                         Kubernetes 1001<br>
                                     </a>
                                     <br>
-                      <a href="https://hackmd.io/s/S2ce7HZhT7O3M7wltUvsIA">
-                                      Linux Link List<br>
-                                                  </a>
                                                   <a href="https://hackmd.io/qVXOqAavTLiGBvZbMaU9Hw">
                                                     Linux Link List1<br>
                                                                 </a>
@@ -330,7 +327,7 @@ CS231n 　　 李飛飛教授<br>
                   <p class="info">intern <span>&bull;</span> <em class="date">2017 - 2018</em></p>
 
                   <p>
-實習過程中我所做的專題是利用deep learning自動將不良內容（以香菸為例）打上馬賽克<br>
+實習過程中我所做的專題是利用deep learning自動將不良內容打上馬賽克<br>
                   </p>
 
                </div>
@@ -354,9 +351,9 @@ CS231n 　　 李飛飛教授<br>
 	    <div class="bars">
 		<ul class="skills">
 	            <li><span class="bar-expand photoshop"></span><em>Python</em></li>
-                    <p>tensorflow,keras,sklearn,pandas...</p><br>
+                    <p>tensorflow,keras,sklearn,Django</p><br>
                     <li><span class="bar-expand illustrator"></span><em>Javascript</em></li>
-                    <p>html5,css3,jquery跟vue.js，會webpack,sass,pug等preprocesser，後端主要使用nodejs, php, Django</p><br>
+                    <p>nodejs</p><br>
 		    <li><span class="bar-expand wordpress"></span><em>C/C++</em></li>
                     <p>tree,graph,link-list,system cache(LRU),OS,linux。
 		</ul>
